# vinhos.com

./: .env.deploy.sample  .env.dev.sample  .env.local.sample  .env.sample  .gitignore  LICENSE  Makefile  README.md  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.deploy.yml  docker-compose.yml  dockerfile-apiserver  dockerfile-nginx  dockerfile-traefik  dockerfile-traefik-local  requirements-dev.txt  requirements.txt  routes.txt
backend/: .dockerignore  Dockerfile  Dockerfile.local  api.py  app.conf  app.ini  dockerfile-apiserver  dockerfile-apiserver-prod  dockerfile-nginx  pyproject.toml  r.sh  requirements.txt  runformat.sh  runtests.sh  wsgi.py
backend/api/: __init__.py  api.py  config.py
backend/api/models/: __init__.py  abc.py  accounts.py  address.py  address_type.py  adds.py  ads.py  countries.py  countries_dict.py  database.py  grape_varieties_dict.py  grape_variety.py  status.py  status_description.py  status_type.py  stores.py  tools.py  users.py  utils.py  verification_type.py  verifications.py  wine_category.py  wine_category_dict.py  wine_grape_variety.py  wine_grape_variety_dict.py  wine_region.py  wine_region_dict.py  wine_type.py  wine_type_dict.py
backend/api/repositories/: accounts.py  ads.py  categories.py  regions.py  registration.py  stores.py  user.py  users.py  verifications.py
backend/api/resources/: base_resource.py  user.py
backend/migrations/: README  alembic.ini  env.py
backend/seeds/: seed.py
backend/test/: appcontext.py  conftest.py  factories.py
(+135 files in other folders)
